--- a/envoy/config.yaml
+++ b/envoy/config.yaml
@@ -4,8 +4,7 @@ static_resources:
       address:
         socket_address:
           address: 0.0.0.0
-          port_value: 10001
-      per_connection_buffer_limit_bytes: 524288
+          port_value: 10000
       filter_chains:
         - filters:
             - name: envoy.filters.network.http_connection_manager
@@ -15,8 +14,8 @@ static_resources:
                 access_log:
                   - name: envoy.access_loggers.file
                     typed_config:
-                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                       path: /dev/stdout
+                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                 route_config:
                   name: local_route
                   virtual_hosts:
@@ -26,16 +25,9 @@ static_resources:
                       routes:
                         - match:
                             prefix: "/"
-                            grpc:
+                            grpc: {}
                           route:
                             cluster: service
-                      cors:
-                        allow_origin_string_match:
-                          - prefix: "*"
-                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
-                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,grpc-status-details-bin,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,authorization
-                        expose_headers: grpc-status-details-bin,grpc-status,grpc-message,authorization
-                        max_age: "2000000000"
                 http_filters:
                   - name: envoy.filters.http.grpc_web
                     typed_config:
@@ -43,6 +35,29 @@ static_resources:
                   - name: envoy.filters.http.cors
                     typed_config:
                       "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
+                  - name: envoy.filters.http.local_ratelimit
+                    typed_config:
+                      "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
+                      stat_prefix: http_local_rate_limiter
+                      token_bucket:
+                        max_tokens: 250
+                        tokens_per_fill: 500
+                        fill_interval: 1s
+                      filter_enabled:
+                        runtime_key: local_rate_limit_enabled
+                        default_value:
+                          numerator: 100
+                          denominator: HUNDRED
+                      filter_enforced:
+                        runtime_key: local_rate_limit_enforced
+                        default_value:
+                          numerator: 100
+                          denominator: HUNDRED
+                      response_headers_to_add:
+                        - append: false
+                          header:
+                            key: x-local-rate-limit
+                            value: 'true'
                   - name: envoy.filters.http.router
                     typed_config:
                       "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
@@ -61,16 +76,6 @@ static_resources:
                     socket_address:
                       address: 0.0.0.0
                       port_value: 8081
-      circuit_breakers:
-        thresholds:
-          - priority: DEFAULT
-            max_connections: 10000000
-            max_pending_requests: 10000000
-            max_requests: 10000000
-          - priority: HIGH
-            max_connections: 10000000
-            max_pending_requests: 10000000
-            max_requests: 10000000
       max_requests_per_connection: 10000000
       per_connection_buffer_limit_bytes: 100000000
       http2_protocol_options: {
@@ -81,15 +86,3 @@ static_resources:
         "max_outbound_control_frames": 100000,
         "max_consecutive_inbound_frames_with_empty_payload": 10,
       }
-
-layered_runtime:
-  layers:
-    - name: static_layer_0
-      static_layer:
-        envoy:
-          resource_limits:
-            listener:
-              booksd_listener_name:
-                connection_limit: 1000000
-        overload:
-          global_downstream_max_connections: 2000
