--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -42,18 +42,24 @@ services:
 
   broker:
     build: .
+#    deploy:
+#      resources:
+#        limits:
+#          cpus: '2'
+#          memory: 4096M
     ports:
       - "8081:8081"
       - "9091:9091"
-#    depends_on:
-#      - db
 
-  jaeger:
-    container_name: jaeger
-    image: jaegertracing/all-in-one:latest
-    ports:
-      - "16686:16686"
-      - "14269:14269"
+    depends_on:
+      - db
+
+#  jaeger:
+#    container_name: jaeger
+#    image: jaegertracing/all-in-one:latest
+#    ports:
+#      - "16686:16686"
+#      - "14269:14269"
 
   grafana:
     image: grafana/grafana:latest
